0.65.3
------
1. When not using button-like check/radio boxes, use view text as the
   indicator color.
2. Fix slight tab glitches when using glow tab mouse over and square
   tabs.
3. Fix background of some widgets when using "left to right" background
   gradients.
4. Fix backgrounds of entry field when etching, but not rounded.

0.65.2
------
1. If there is not enough space for large arrows in FireFox's menuitems,
   use small ones.
2. Fix incorrect scrollbar trough border.
3. Better, non-hacky, fix for Firefox's location bar.
4. Make Firefox's entry fields smaller.

0.65.1
------
 1. Use a border width of 1 if gradienting popupmenus.
 2. When using darkened menu stripe use popupmenu background colour as the
    base colour.
 3. Draw menu stripe flush with the edge of menu.
 4. Match 'darken' menuStripe to KDE4.
 5. When using menu stripe, adjust separators by 20 (2 for Mozilla/Oo.o) pixels left.
 6. Increase width of menu stripe for Mozilla apps.
 7. Draw menu stripe for menus associated with dialogs.
 8. Match KDE4 button text position better.
 9. Fix some issues with oxygen-style combo buttons. (QtCurve creates maps from
    the parent -> entry, and parent -> button - these maps were not being cleared
    when the widget was destroyed. Also, dont keep reference to last moused-overed
    entry after its unrealized).
10. Dont highlight background of checks/radios when this is not enabled, but
    gradient background is.
11. Disable background gradients for Java, Mozilla, OpenOffice, GIMP toolbox, and
    tooltip windows.
12. Improve background gradients when drawing parts of entries, etc.
13. Very hackish fix to the border around the icons within firefox's location and
    search entry fields. Disabled by default, to enable pass
    -DQTC_FIX_FIREFOX_LOCATION_BAR=true to cmake. Note that enabling this may
    cause issues with other entry fields in firefox.
14. Adjust position of checks and radios in menus.